--- a/roles/services/templates/storage/image/service/proftpd/config/proftpd.conf
+++ b/roles/services/templates/storage/image/service/proftpd/config/proftpd.conf
@@ -55,11 +55,11 @@ SFTPHostKey	/etc/proftpd/certs/cert.key
 SFTPAuthMethods	password
 SFTPOptions IgnoreSCPUploadTimes IgnoreSFTPSetTimes
 
-LDAPServer {{ openldap['ldap_hostname'] }}:389
+LDAPServer {{ conf['ldap_hostname'] }}:389
 LDAPProtocolVersion 3
 LDAPAuthBinds on
 LDAPBindDN "cn={{ openldap['ldap_readonly_user_username'] }},{{ openldap['ldap_base_dn'] }}" "{{ openldap['ldap_readonly_user_password'] }}"
-LDAPUsers ou=users,{{ openldap['ldap_base_dn'] }} "(&(cn=%u)(objectclass=posixAccount)(memberOf=cn=storage,ou=groups,{{ openldap['ldap_base_dn'] }}))"
+LDAPUsers ou=users,{{ openldap['ldap_base_dn'] }} "(&(cn=%u)(objectclass=posixAccount)(memberOf=cn=storage_admins,ou=groups,{{ openldap['ldap_base_dn'] }}))"
 LDAPGroups ou=groups,{{ openldap['ldap_base_dn'] }}
 
 LDAPForceDefaultUID on
