--- a/roles/services/tasks/gitlab.yml
+++ b/roles/services/tasks/gitlab.yml
@@ -7,16 +7,16 @@
     - service_dirs:
         - certs
     - service_gen_certs:
-        - "gitlab.{{ openldap['ldap_domain'] }}"
-        - "mattermost.{{ openldap['ldap_domain'] }}"
-        - "registry.{{ openldap['ldap_domain'] }}"
+        - "gitlab.{{ conf['domain'] }}"
+        - "mattermost.{{ conf['domain'] }}"
+        - "registry.{{ conf['domain'] }}"
     - service_copy_certs:
         - { src: "ca.crt", dest: "certs/ca.crt" }
         - { src: "dh.pem", dest: "certs/dhparam.pem" }
-        - { src: "issued/gitlab.{{ openldap['ldap_domain'] }}.crt", dest: "certs/gitlab.{{ openldap['ldap_domain'] }}.crt" }
-        - { src: "private/gitlab.{{ openldap['ldap_domain'] }}.key", dest: "certs/gitlab.{{ openldap['ldap_domain'] }}.key" }
-        - { src: "issued/mattermost.{{ openldap['ldap_domain'] }}.crt", dest: "certs/mattermost.{{ openldap['ldap_domain'] }}.crt" }
-        - { src: "private/mattermost.{{ openldap['ldap_domain'] }}.key", dest: "certs/mattermost.{{ openldap['ldap_domain'] }}.key" }
-        - { src: "issued/registry.{{ openldap['ldap_domain'] }}.crt", dest: "certs/registry.{{ openldap['ldap_domain'] }}.crt" }
-        - { src: "private/registry.{{ openldap['ldap_domain'] }}.key", dest: "certs/registry.{{ openldap['ldap_domain'] }}.key" }
+        - { src: "issued/gitlab.{{ conf['domain'] }}.crt", dest: "certs/gitlab.{{ conf['domain'] }}.crt" }
+        - { src: "private/gitlab.{{ conf['domain'] }}.key", dest: "certs/gitlab.{{ conf['domain'] }}.key" }
+        - { src: "issued/mattermost.{{ conf['domain'] }}.crt", dest: "certs/mattermost.{{ conf['domain'] }}.crt" }
+        - { src: "private/mattermost.{{ conf['domain'] }}.key", dest: "certs/mattermost.{{ conf['domain'] }}.key" }
+        - { src: "issued/registry.{{ conf['domain'] }}.crt", dest: "certs/registry.{{ conf['domain'] }}.crt" }
+        - { src: "private/registry.{{ conf['domain'] }}.key", dest: "certs/registry.{{ conf['domain'] }}.key" }
   tags: [init, build, push]
