--- a/roles/services/tasks/mailserv.yml
+++ b/roles/services/tasks/mailserv.yml
@@ -7,10 +7,10 @@
     - service_dirs:
         - certs
     - service_gen_certs:
-        - "mail.{{ openldap['ldap_domain'] }}"
+        - "mail.{{ conf['domain'] }}"
     - service_copy_certs:
         - { src: "ca.crt", dest: "certs/ca.crt" }
         - { src: "dh.pem", dest: "certs/dhparam.pem" }
-        - { src: "issued/mail.{{ openldap['ldap_domain'] }}.crt", dest: "certs/cert.crt" }
-        - { src: "private/mail.{{ openldap['ldap_domain'] }}.key", dest: "certs/cert.key" }
+        - { src: "issued/mail.{{ conf['domain'] }}.crt", dest: "certs/cert.crt" }
+        - { src: "private/mail.{{ conf['domain'] }}.key", dest: "certs/cert.key" }
   tags: [init, build, push]
