--- a/roles/services/templates/redmine/image/service/redmine/config/configuration.yml
+++ b/roles/services/templates/redmine/image/service/redmine/config/configuration.yml
@@ -3,12 +3,12 @@ default:
   email_delivery:
     delivery_method: :smtp
     smtp_settings:
-      address: "{{ mailserv['hostname'] }}.{{ mailserv['domain'] }}"
-      port: 25
-      authentication: :login
-      domain: "{{ mailserv['domain'] }}"
-      user_name: 'redmine'
-      password: "{{ redmine['admin_mail_account_password'] }}"
+      address: "{{ redmine['smtp_address'] }}"
+      port: "{{ redmine['smtp_port'] }}"
+      authentication: {{ redmine['smtp_authentication'] }}
+      domain: "{{ redmine['smtp_domain'] }}"
+      user_name: "{{ redmine['smtp_user_name'] }}"
+      password: "{{ redmine['smtp_password'] }}"
   attachments_storage_path:
   autologin_cookie_name:
   autologin_cookie_path:
