--- a/roles/services/templates/caddy/image/Dockerfile
+++ b/roles/services/templates/caddy/image/Dockerfile
@@ -3,10 +3,15 @@ FROM caddy:{{ conf['docker_tag_caddy']|default("2.3.0") }}
 
 LABEL project="{{ project }}"
 
-COPY Caddyfile /etc/caddy/Caddyfile
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
-ADD private /etc/pki/tls/private/
-ADD certs /etc/pki/tls/certs/
-ADD pki /opt/caddy/pki/
+COPY Caddyfile /service/Caddyfile
+
+ADD private /service/private/
+ADD certs /service/certs/
+ADD pki /service/pki/
 
 EXPOSE 80 443
+
+ENTRYPOINT ["/entrypoint.sh"]
