--- a/.editorconfig
+++ b/.editorconfig
@@ -17,5 +17,9 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
+[*.rst]
+indent_style = space
+indent_size = 4
+
 [Makefile]
 indent_style = tab
