--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,45 @@
 #
 #    pip-compile requirements.in
 #
-ansible-base==2.10.8      # via ansible
-ansible==3.3.0            # via -r requirements.in
-certifi==2020.12.5        # via requests
-cffi==1.14.5              # via cryptography
-chardet==4.0.0            # via requests
-cryptography==3.4.7       # via ansible-base
-docker-py==1.10.6         # via -r requirements.in
-docker-pycreds==0.4.0     # via docker-py
-idna==2.10                # via requests
-jinja2==2.11.3            # via ansible-base
-markupsafe==1.1.1         # via jinja2
-packaging==20.9           # via ansible-base
-pycparser==2.20           # via cffi
-pyparsing==2.4.7          # via packaging
-pyyaml==5.4.1             # via ansible-base
-requests==2.25.1          # via docker-py
-six==1.15.0               # via docker-py, docker-pycreds, websocket-client
-urllib3==1.26.4           # via requests
-websocket-client==0.58.0  # via docker-py
+ansible-core==2.11.0
+    # via ansible
+ansible==4.0.0
+    # via -r requirements.in
+certifi==2020.12.5
+    # via requests
+cffi==1.14.5
+    # via cryptography
+chardet==4.0.0
+    # via requests
+cryptography==3.4.7
+    # via ansible-core
+docker-py==1.10.6
+    # via -r requirements.in
+docker-pycreds==0.4.0
+    # via docker-py
+idna==2.10
+    # via requests
+jinja2==3.0.1
+    # via ansible-core
+markupsafe==2.0.1
+    # via jinja2
+packaging==20.9
+    # via ansible-core
+pycparser==2.20
+    # via cffi
+pyparsing==2.4.7
+    # via packaging
+pyyaml==5.4.1
+    # via ansible-core
+requests==2.25.1
+    # via docker-py
+resolvelib==0.5.4
+    # via ansible-core
+six==1.16.0
+    # via
+    #   docker-py
+    #   docker-pycreds
+urllib3==1.26.4
+    # via requests
+websocket-client==1.0.0
+    # via docker-py
