--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,76 +4,199 @@
 #
 #    pip-compile requirements_dev.in
 #
-alabaster==0.7.12         # via sphinx
-ansible-base==2.10.8      # via ansible
-ansible-lint==5.0.7       # via -r requirements_dev.in, molecule
-ansible==3.3.0            # via -r requirements_dev.in
-argh==0.26.2              # via -r requirements_dev.in
-arrow==1.1.0              # via jinja2-time
-babel==2.9.1              # via sphinx
-bcrypt==3.2.0             # via paramiko
-binaryornot==0.4.4        # via cookiecutter
-bracex==2.1.1             # via wcmatch
-bump2version==1.0.1       # via -r requirements_dev.in
-cerberus==1.3.3           # via molecule
-certifi==2020.12.5        # via requests
-cffi==1.14.5              # via bcrypt, cryptography, pynacl
-chardet==4.0.0            # via binaryornot, requests
-click-completion==0.5.2   # via molecule
-click-help-colors==0.9    # via molecule
-click==7.1.2              # via click-completion, click-help-colors, cookiecutter, molecule
-colorama==0.4.4           # via rich
-commonmark==0.9.1         # via rich
-cookiecutter==1.7.2       # via molecule
-cryptography==3.4.7       # via ansible-base, paramiko
-distro==1.5.0             # via selinux
-docker-py==1.10.6         # via -r requirements_dev.in
-docker-pycreds==0.4.0     # via docker-py
-docutils==0.16            # via sphinx
-enrich==1.2.6             # via ansible-lint, molecule
-idna==2.10                # via requests
-imagesize==1.2.0          # via sphinx
-jinja2-time==0.2.0        # via cookiecutter
-jinja2==2.11.3            # via ansible-base, click-completion, cookiecutter, jinja2-time, molecule, sphinx
-markupsafe==1.1.1         # via cookiecutter, jinja2
-molecule==3.3.0           # via -r requirements_dev.in
-packaging==20.9           # via ansible-base, ansible-lint, molecule, sphinx
-paramiko==2.7.2           # via molecule
-pathspec==0.8.1           # via yamllint
-pluggy==0.13.1            # via molecule
-poyo==0.5.0               # via cookiecutter
-pycparser==2.20           # via cffi
-pygments==2.8.1           # via rich, sphinx
-pynacl==1.4.0             # via paramiko
-pyparsing==2.4.7          # via packaging
-python-dateutil==2.8.1    # via arrow
-python-slugify==4.0.1     # via cookiecutter
-pytz==2021.1              # via babel
-pyyaml==5.4.1             # via ansible-base, ansible-lint, molecule, yamllint
-requests==2.25.1          # via cookiecutter, docker-py, sphinx
-rich==10.1.0              # via ansible-lint, enrich, molecule
-ruamel.yaml.clib==0.2.2   # via ruamel.yaml
-ruamel.yaml==0.17.4       # via ansible-lint
-selinux==0.2.1            # via molecule
-shellingham==1.4.0        # via click-completion
-six==1.15.0               # via bcrypt, click-completion, cookiecutter, docker-py, docker-pycreds, pynacl, python-dateutil, tenacity, websocket-client
-snowballstemmer==2.1.0    # via sphinx
-sphinx==3.5.4             # via -r requirements_dev.in
-sphinxcontrib-applehelp==1.0.2  # via sphinx
-sphinxcontrib-devhelp==1.0.2  # via sphinx
-sphinxcontrib-htmlhelp==1.0.3  # via sphinx
-sphinxcontrib-jsmath==1.0.1  # via sphinx
-sphinxcontrib-qthelp==1.0.3  # via sphinx
-sphinxcontrib-serializinghtml==1.1.4  # via sphinx
-subprocess-tee==0.3.1     # via molecule
-tenacity==7.0.0           # via ansible-lint
-text-unidecode==1.3       # via python-slugify
-typing-extensions==3.7.4.3  # via rich
-urllib3==1.26.4           # via requests
-watchdog==2.0.3           # via -r requirements_dev.in
-wcmatch==8.1.2            # via ansible-lint
-websocket-client==0.58.0  # via docker-py
-yamllint==1.26.1          # via -r requirements_dev.in
+alabaster==0.7.12
+    # via sphinx
+ansible-core==2.11.0
+    # via ansible
+ansible-lint==5.0.8
+    # via
+    #   -r requirements_dev.in
+    #   molecule
+ansible==4.0.0
+    # via -r requirements_dev.in
+argh==0.26.2
+    # via -r requirements_dev.in
+arrow==1.1.0
+    # via jinja2-time
+babel==2.9.1
+    # via sphinx
+bcrypt==3.2.0
+    # via paramiko
+binaryornot==0.4.4
+    # via cookiecutter
+bracex==2.1.1
+    # via wcmatch
+bump2version==1.0.1
+    # via -r requirements_dev.in
+cerberus==1.3.4
+    # via molecule
+certifi==2020.12.5
+    # via requests
+cffi==1.14.5
+    # via
+    #   bcrypt
+    #   cryptography
+    #   pynacl
+chardet==4.0.0
+    # via
+    #   binaryornot
+    #   requests
+click-completion==0.5.2
+    # via molecule
+click-help-colors==0.9
+    # via molecule
+click==8.0.0
+    # via
+    #   click-completion
+    #   click-help-colors
+    #   cookiecutter
+    #   molecule
+colorama==0.4.4
+    # via rich
+commonmark==0.9.1
+    # via rich
+cookiecutter==1.7.3
+    # via molecule
+cryptography==3.4.7
+    # via
+    #   ansible-core
+    #   paramiko
+distro==1.5.0
+    # via selinux
+docker-py==1.10.6
+    # via -r requirements_dev.in
+docker-pycreds==0.4.0
+    # via docker-py
+docutils==0.16
+    # via
+    #   sphinx
+    #   sphinx-rtd-theme
+enrich==1.2.6
+    # via
+    #   ansible-lint
+    #   molecule
+idna==2.10
+    # via requests
+imagesize==1.2.0
+    # via sphinx
+jinja2-time==0.2.0
+    # via cookiecutter
+jinja2==2.11.3
+    # via
+    #   ansible-core
+    #   click-completion
+    #   cookiecutter
+    #   jinja2-time
+    #   molecule
+    #   sphinx
+markupsafe==1.1.1
+    # via
+    #   jinja2
+    #   sphinx
+molecule==3.3.1
+    # via -r requirements_dev.in
+packaging==20.9
+    # via
+    #   ansible-core
+    #   ansible-lint
+    #   molecule
+    #   sphinx
+paramiko==2.7.2
+    # via molecule
+pathspec==0.8.1
+    # via yamllint
+pluggy==0.13.1
+    # via molecule
+poyo==0.5.0
+    # via cookiecutter
+pycparser==2.20
+    # via cffi
+pygments==2.9.0
+    # via
+    #   rich
+    #   sphinx
+pynacl==1.4.0
+    # via paramiko
+pyparsing==2.4.7
+    # via packaging
+python-dateutil==2.8.1
+    # via arrow
+python-slugify==5.0.2
+    # via cookiecutter
+pytz==2021.1
+    # via babel
+pyyaml==5.4.1
+    # via
+    #   ansible-core
+    #   ansible-lint
+    #   molecule
+    #   yamllint
+requests==2.25.1
+    # via
+    #   cookiecutter
+    #   docker-py
+    #   sphinx
+resolvelib==0.5.4
+    # via ansible-core
+rich==10.2.1
+    # via
+    #   ansible-lint
+    #   enrich
+    #   molecule
+ruamel.yaml.clib==0.2.2
+    # via ruamel.yaml
+ruamel.yaml==0.17.4
+    # via ansible-lint
+selinux==0.2.1
+    # via molecule
+shellingham==1.4.0
+    # via click-completion
+six==1.16.0
+    # via
+    #   bcrypt
+    #   click-completion
+    #   cookiecutter
+    #   docker-py
+    #   docker-pycreds
+    #   pynacl
+    #   python-dateutil
+    #   tenacity
+snowballstemmer==2.1.0
+    # via sphinx
+sphinx-rtd-theme==0.5.2
+    # via -r requirements_dev.in
+sphinx==4.0.1
+    # via
+    #   -r requirements_dev.in
+    #   sphinx-rtd-theme
+sphinxcontrib-applehelp==1.0.2
+    # via sphinx
+sphinxcontrib-devhelp==1.0.2
+    # via sphinx
+sphinxcontrib-htmlhelp==1.0.3
+    # via sphinx
+sphinxcontrib-jsmath==1.0.1
+    # via sphinx
+sphinxcontrib-qthelp==1.0.3
+    # via sphinx
+sphinxcontrib-serializinghtml==1.1.4
+    # via sphinx
+subprocess-tee==0.3.1
+    # via molecule
+tenacity==7.0.0
+    # via ansible-lint
+text-unidecode==1.3
+    # via python-slugify
+urllib3==1.26.4
+    # via requests
+watchdog==2.1.2
+    # via -r requirements_dev.in
+wcmatch==8.1.2
+    # via ansible-lint
+websocket-client==1.0.0
+    # via docker-py
+yamllint==1.26.1
+    # via -r requirements_dev.in
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
